# baseball-scoreboard-service

./: .gitignore  pyproject.toml
app/: main.py
app/routers/: scores.py
