[tool.poetry]
name = "baseball-scoreboard-service"
version = "0.1.0"
description = ""
authors = ["dmagaway <your-email@example.com>"]
readme = "README.md"
packages = [{ include = "app", from = "" }]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
